# defect-detector-v3

./: .gitignore  ELECTRON_DESKTOP_TZ.md  README.md  RUN.md  inference_yolo.py  package-lock.json  package.json  start-dev.ps1  stop-dev.ps1  train_yolo.py  ЗАПУСК.md
LightServer/: Program.cs  appsettings.json
LightServer/Controllers/: LightController.cs
LightServer/Models/: FlashRequest.cs  SetLightForAll.cs  SetLightRequest.cs  SetMultipleLightsRequest.cs
LightServer/Services/: LightService.cs
LightServerv.v2/: API.md  LightServer.csproj  LightServer.http  Program.cs  appsettings.json
LightServerv.v2/Controllers/: LightController.cs
LightServerv.v2/Models/: ApiModels.cs  LightCommandRequest.cs
LightServerv.v2/Services/: LightControlService.cs  LightShutdownHostedService.cs  MvsSdkLifetime.cs
analisSurface/: README.md
analisSurface/backend/: requirements.txt
analisSurface/backend/app/: main.py  runtime.py
backend/: requirements.txt
backend/app/: main.py  runner.py
backend/app/api/: inspection_routes.py  (+3 more)
backend/camera_server/: main.py
c_capture/: camera_server.c
camera-worker/: CMakeLists.txt
camera-worker/src/: main.c  python_embed.c
config/: config.json  config.yaml  conveyor-benchmark.yaml
front-end/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
front-end/electron/: main.cjs  preload.cjs
front-end/scripts/: dev.mjs
front-end/src/: main.ts  style.css  vite-env.d.ts
frontend/: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.jsx  index.css
kopcheniservice/: README.md  run_stdio_worker.py
orchestrator-java/: TestJson.java  pom.xml
(+213 files in other folders)
